# datascience-template-cookicutter

./: cookiecutter.json  readme.md
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  readme.md
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}-api/: docker-compose.yml  pyproject.toml  readme.md
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}-api/src/api/: main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}-api/src/api/helpers/: __init__.py  env.py  inputs.py  lifespan.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}-cache/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}-job/: docker-compose.yml  pyproject.toml  readme.md
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}-job/src/job/: main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}-job/src/job/tasks/: __init__.py  evaluate.py  prepare.py  train.py
