[tool.poetry]
name = "{{cookiecutter.project_slug}}-api"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.user_name}} <{{cookiecutter.user_email}}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
