[tool.poetry]
name = "{{cookiecutter.project_slug}}-job"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.user_name}} <{{cookiecutter.user_email}}>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
